Fix z-index on header

--- a/static/style/header.css
+++ b/static/style/header.css
@@ -1,3 +1,7 @@
+.navbar-static-top {
+    z-index: -1;
+}
+
 #header {
     margin: 0%;
 }
